[tool.poetry]
name = "Core"
version = "1.0"
description = "Personal bot of DevotedExu server"
authors = ["Exenifix"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
exencolorlogs = "^1.1.1"
asyncpg = "^0.27.0"
Pillow = "^9.3.0"
tabulate = "^0.9.0"
strmath = "^1.1"
disnake = "^2.7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
