[tool.poetry]
name = "Core"
version = "1.0"
description = "Personal bot of DevotedExu server"
authors = ["Exenifix"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
exencolorlogs = "^1.1.1"
asyncpg = "^0.27.0"
Pillow = "^9.3.0"
tabulate = "^0.9.0"
strmath = "^1.1"
disnake = "^2.7.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.247"
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
